# Deubot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  deubot.service  pyproject.toml  test_agent.py  test_comprehensive_saving.py  test_phrase_saving.py
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: deploy.yml
deubot/: agent.py  bot.py  database.py  main.py  system_prompt.md  tools.py
docs/: CLAUDE_PROMPT.md
tests/: __init__.py  conftest.py  test_agent.py  test_comprehensive_saving.py  test_database_idempotency.py  test_phrase_saving.py  test_review_process.py  test_similarity.py  test_sm2.py
