[project]
name = "deubot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=2.6.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.0",
    "black>=23.0",
    "flake8>=6.0",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
markers = [
    "unit: Fast unit tests that don't require LLM API calls",
    "llm: Integration tests that require OpenAI API calls (slow, use -n 20)",
]
